fix work title color in dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,10 @@ h3 { font-size: var(--fs-h3) }
     width: 100%;
 }
 
+.section__title--work.dark {
+    color: var(--clr-dark)
+}
+
 .section__subtitle--work {
     color: var(--clr-accent);
     font-weight: var(--fw-bold);
